# HuatingRiichiClub

./: README.md
service/: .env.example  docker-compose.yml
service/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
service/backend/app/: main.py
service/docs/: 01-legacy-data-structure.md  02-legacy-api-list.md  03-legacy-admin-pages.md  04-init-commands.md  05-fastapi-quickstart.md
service/frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  vite.config.ts
uniapp/: package.json  pnpm-lock.yaml
uniapp/项目分析/: 01-页面-首页-index.md  02-页面-排名-rank-index.md  03-页面-我的-mine-index.md  06-页面-资料编辑-userEdit.md  07-页面-会员-member.md
小程序项目页面分析/: 00-项目与接口总览.md  04-页面-个人数据-personaldata.md  05-页面-注册-regedit.md  08-页面-账单-bill.md  09-页面-牌谱-record.md  10-页面-记分-score.md  11-页面-协议隐私-privacy.md  12-接口总表-按页面归类.md  13-页面跳转与流程图-文字版.md
